test: 수정 unchecked cast warning 제거
unchecked cast warning 제거를 위한 type check 추가